# CSE244_HWs

./: README.md
Final/: CMakeLists.txt  QRFact.h  SVDecomposition.h  clients  clients.c  makefile  pInverse.c  pInverse.h  server  server.c  sharedArea.h
Final/log/clients/: [27182]140061484631808.txt  [27182]140061493024512.txt  [27202]140595212490496.txt  [27202]140595220883200.txt
Final/log/server/: [27182]139768384882432.txt  [27182]139768393275136.txt  [27202]139768293746432.txt  [27202]139768302139136.txt
HW01/: file.txt  hw1.c  makefile  readme.txt  test.txt
HW02/: hw2.c  makefile
HW02/this/is/a/dir/: test.txt
HW03/: hw3.c  makefile
HW03/this/: file.txt  file2.txt
HW03/this/not/file/: here.txt
HW04/: CMakeLists.txt  grepTh  hw  hw4.c  makefile
HW05/: .gitignore  .swp  CMakeLists.txt  grepThwShandMQ  log.txt  main.c  makefile
Midterm/: CMakeLists.txt  Makefile  client.c  main.c  seeWhat.c  showResults.c  timeServer.c
